--- a/demo-pubsub-item-reader/src/main/resources/application.properties
+++ b/demo-pubsub-item-reader/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # steps simples
 #spring.batch.job.names= simple-steps
-spring.batch.job.names= simple-pubsub
-
+#spring.batch.job.names= simple-pubsub
+spring.batch.job.names= pubsub-local-partition
 
