pubsub usando template

--- a/demo-pubsub-item-reader/src/main/resources/application.properties
+++ b/demo-pubsub-item-reader/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 # steps simples
 #spring.batch.job.names= simple-steps
 #spring.batch.job.names= simple-pubsub
-spring.batch.job.names= pubsub-local-partition
+#spring.batch.job.names= pubsub-local-partition
 
+# com pubsub template
+#spring.batch.job.names= simple-template-pubsub
+spring.batch.job.names= template-pubsub-local-partition
