--- a/demo-pubsub-item-reader/pom.xml
+++ b/demo-pubsub-item-reader/pom.xml
@@ -37,6 +37,11 @@
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-pubsub</artifactId>
 		</dependency>
+		<!--  puubsub template -->
+		<dependency>
+		  <groupId>org.springframework.cloud</groupId>
+		  <artifactId>spring-cloud-gcp-starter-pubsub</artifactId>
+		</dependency>
 		<!-- 
 		<dependency>
 			<groupId>com.google.cloud</groupId>
@@ -90,6 +95,14 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!--  PubSubTemplate -->
+		    <dependency>
+		      <groupId>org.springframework.cloud</groupId>
+		      <artifactId>spring-cloud-gcp-dependencies</artifactId>
+		      <version>1.2.7.RELEASE</version>
+		      <type>pom</type>
+		      <scope>import</scope>
+		    </dependency>
 			 
 		</dependencies>
 	</dependencyManagement>
