--- a/demo-pubsub-item-reader/src/main/resources/application.properties
+++ b/demo-pubsub-item-reader/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+spring.cloud.gcp.project-id=playground--sergio
+spring.cloud.gcp.credentials.location=file:///C:/Users/hayashi/gcloud/playground--sergio-6ca0c4fad76b.json
+
+pubsub.topic=mytopic
+
+#--- jobs .selecione um  ----
+
+#auxiliares
+#spring.batch.job.names=simple-populate
+
 # steps simples
 #spring.batch.job.names= simple-steps
 #spring.batch.job.names= simple-pubsub
@@ -5,4 +15,7 @@
 
 # com pubsub template
 #spring.batch.job.names= simple-template-pubsub
-spring.batch.job.names= template-pubsub-local-partition
+#pring.batch.job.names= template-pubsub-local-partition
+spring.batch.job.names= template-pubsub-local-partition-with-populate
+
+
