--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,7 @@ buildNumber.properties
 .flattened-pom.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/maven
+
+
+playground--sergio-6ca0c4fad76b.json
+
