--- a/demo-partitioned-pubsub-job/src/main/resources/application.properties
+++ b/demo-partitioned-pubsub-job/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.cloud.gcp.project-id=playground--sergio
 #spring.cloud.gcp.credentials.location=file:///C:/Users/hayashi/gcloud/playground--sergio-6ca0c4fad76b.json
 
 # credenciais do gcp
-# como os testes est„o sendo feitos em cluster local, importa o json, mas no ambiente GKE deve ter um jeito melhor
+# como os testes est√£o sendo feitos em cluster local, importa o json, mas no ambiente GKE deve ter um jeito melhor
 spring.cloud.gcp.credentials.location=classpath:playground--sergio-6ca0c4fad76b.json
 
 pubsub.topic=mytopic
+
+batch.job.pubsub.itemreader.topic=mytopic
+
 
 #spring.batch.job.names= template-pubsub-local-partition-with-populate
 #spring.batch.job.names= remote-partitioned-job
