--- a/demo-pubsub-item-reader/src/main/resources/application.properties
+++ b/demo-pubsub-item-reader/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.cloud.gcp.project-id=playground--sergio
 spring.cloud.gcp.credentials.location=file:///C:/Users/hayashi/gcloud/playground--sergio-6ca0c4fad76b.json
 
 pubsub.topic=mytopic
+pubsub.subscriptionId=mysub
+
 
 #--- jobs .selecione um  ----
 
@@ -16,6 +18,8 @@ pubsub.topic=mytopic
 # com pubsub template
 #spring.batch.job.names= simple-template-pubsub
 #pring.batch.job.names= template-pubsub-local-partition
-spring.batch.job.names= template-pubsub-local-partition-with-populate
-
+#spring.batch.job.names= template-pubsub-local-partition-with-populate
+#spring.batch.job.names= simple-reader-ack-job
+spring.batch.job.names= simple-ack-on-writer-job
+#spring.batch.job.names= simpleReaderJob
 
