--- a/demo-partitioned-pubsub-job/pom.xml
+++ b/demo-partitioned-pubsub-job/pom.xml
@@ -33,7 +33,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-integration</artifactId>
 		</dependency>
-		<!--  sem esta dependencia da erro de  org/springframework/batch/integration/partition/BeanFactoryStepLocator not found -->
+		<!--  sem esta dependencia da erro de  org/springframework/batch/integration/partition/BeanFactoryStepLocator -->
         <dependency>
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-integration</artifactId>
@@ -44,12 +44,6 @@
             <artifactId>spring-cloud-deployer-kubernetes</artifactId>
             <version>2.5.0</version>
         </dependency>
-		<!-- 
-		<dependency>
-			<groupId>com.google.cloud</groupId>
-			<artifactId>spring-cloud-gcp-starter</artifactId>
-		</dependency>
-		 -->
 		<!--  puubsub template -->
 		<dependency>
 		  <groupId>org.springframework.cloud</groupId>
@@ -84,22 +78,6 @@
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
-			<!-- 
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.google.cloud</groupId>
-				<artifactId>spring-cloud-gcp-dependencies</artifactId>
-				<version>${spring-cloud-gcp.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
- 			-->			
 			<!--  PubSubTemplate -->
 			<dependency>
 				<groupId>com.google.cloud</groupId>
@@ -127,7 +105,6 @@
 		    
 		</dependencies>
 	</dependencyManagement>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -136,5 +113,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
