--- a/demo-pubsub-item-reader/src/main/resources/application.properties
+++ b/demo-pubsub-item-reader/src/main/resources/application.properties
@@ -12,7 +12,7 @@ pubsub.subscriptionId=mysub
 
 # steps simples
 #spring.batch.job.names= simple-steps
-#spring.batch.job.names= simple-pubsub
+spring.batch.job.names= simple-pubsub
 #spring.batch.job.names= pubsub-local-partition
 
 # com pubsub template
@@ -20,6 +20,6 @@ pubsub.subscriptionId=mysub
 #pring.batch.job.names= template-pubsub-local-partition
 #spring.batch.job.names= template-pubsub-local-partition-with-populate
 #spring.batch.job.names= simple-reader-ack-job
-spring.batch.job.names= simple-ack-on-writer-job
+#spring.batch.job.names= simple-ack-on-writer-job
 #spring.batch.job.names= simpleReaderJob
 
